--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,10 @@
 body {
-  background-color: rgb(241, 255, 47);
+  background-color: rgb(229, 233, 170);
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
 
 .search-form {
@@ -13,4 +18,24 @@ body {
   height: 35px;
   width: 300px;
   border-color: rgba(255, 208, 0, 0.37);
+}
+
+.gallery {
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -10px;
+  margin-left: -10px;
+}
+
+.photo-card {
+  padding: 5px;
+  margin-top: 10px;
+  margin-left: 10px;
+  flex-basis: calc(100% / 4 - 10px);
+  background-color: honeydew;
+  border: 1px solid green;
+  border-radius: 5px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
