--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,45 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+b {
+  display: block;
+}
+
+ul,
+ol {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+  height: 30px;
+  border-radius: 5px;
+  font-weight: 500;
+}
+
 body {
-  background-color: rgb(229, 233, 170);
+  background-color: rgba(201, 220, 231, 0.959);
 }
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .hidden {
@@ -21,7 +56,8 @@ img {
 .search-form input {
   height: 35px;
   width: 300px;
-  border-color: rgba(255, 208, 0, 0.37);
+  border-color: rgb(229, 245, 14);
+  border-radius: 10px;
 }
 
 .gallery {
@@ -32,14 +68,32 @@ img {
   margin-left: -10px;
 }
 
-.photo-card {
-  padding: 5px;
+.gallery__item {
   margin-top: 10px;
   margin-left: 10px;
   flex-basis: calc(100% / 4 - 10px);
+}
+
+.photo-card {
   background-color: honeydew;
   border: 1px solid green;
   border-radius: 5px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.wrapper-img {
+  height: 200px;
+}
+
+.info {
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+}
+
+.info-item {
+  text-align: center;
+  color: black;
+  font-size: 12px;
 }
