--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -31,19 +31,20 @@ button {
   font-weight: 500;
 }
 
+button:hover {
+  color: blue;
+  border-color: rgb(226, 14, 7);
+}
+
 body {
   background-color: rgba(201, 220, 231, 0.959);
 }
 
-img {
+.wrapper-img img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.hidden {
-  display: none;
 }
 
 .search-form {
@@ -54,8 +55,10 @@ img {
 }
 
 .search-form input {
+  padding-left: 10px;
   height: 35px;
   width: 300px;
+  font-size: 20px;
   border-color: rgb(229, 245, 14);
   border-radius: 10px;
 }
@@ -76,10 +79,17 @@ img {
 
 .photo-card {
   background-color: honeydew;
+  overflow: hidden;
   border: 1px solid green;
   border-radius: 5px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: transform 400ms ease-out;
+}
+
+.photo-card:hover {
+  transform: scale(1.04);
+  border-color: blue;
 }
 
 .wrapper-img {
@@ -96,4 +106,20 @@ img {
   text-align: center;
   color: black;
   font-size: 12px;
+}
+
+.load-more {
+  display: block;
+  font-size: larger;
+  border-color: green;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  min-width: 150px;
+  height: 50px;
+}
+
+.hidden {
+  display: none;
 }
